Name:		evchain
Version:	0.1.999
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:     test/resources/*.lhe
                test/resources/*.lhe.gz

-- Test-suite test-evchain 
--   type:            exitcode-stdio-1.0
--   hs-source-dirs:  test
--   main-is:         test-evchain.hs
--   build-depends:   base>4,
--                   mtl >= 2, 
--                   filepath >= 1.3,
--                   directory >= 1.1,
--                   conduit >= 0.5 && < 1,
--                   xml-conduit >= 1.0, 
--                   conduit-util >= 0.2.0.999 && < 0.2.2,
--                   HEPUtil >= 0.1.999 && < 0.3,
--                   LHEParser >= 0.2.999 && < 0.4,
--                   madgraph-auto >= 0.6.999 && < 0.8, 
--                   madgraph-auto-model >= 0.3.999 && < 0.5,
--                   webdav-manager >= 0.1,
--                   evchain

-- Executable evchain
--  Main-is: evchain.hs
--  hs-source-dirs: exe
--  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all
--  Build-Depends: 
--                   base>4, mtl>2, directory, filepath,
--                   cmdargs, 
--                   containers >= 0.4,
--                   conduit >= 0.5 && < 1,
--                   conduit-util >= 0.2.0.999,
--                   HEPUtil,
--                   LHEParser,
--                   random >= 1.0, 
--                   unordered-containers >= 0.2,
--                   madgraph-auto >= 0.6.999 && < 0.8, 
--                   madgraph-auto-model >= 0.3.999 && < 0.5,
--                   webdav-manager >= 0.1,
--                   evchain

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   bytestring >= 0.9,
                   cmdargs, 
                   LHEParser >= 0.2.999,
                   HEPUtil, 
                   xml-types,
                   conduit >= 0.5 && < 1,
                   conduit-util >= 0.2.0.999,
                   zlib-conduit >= 0.5,
                   xml-conduit >= 1.0, 
                   vector, 
                   hmatrix, 
                   random >= 1.0,
                   unordered-containers >= 0.2, 
                   hashable >= 1.1,
                   madgraph-auto >= 0.6.999 && < 0.8,
                   madgraph-auto-model >= 0.3.999 && < 0.5,
                   webdav-manager >= 0.1,
                   process,
                   unix,
                   containers >= 0.4, 
                   pureMD5 >= 2.1, 
                   zlib >= 0.5
                   
  Exposed-Modules: 
                   HEP.Automation.EventChain.Driver 
                   HEP.Automation.EventChain.File
                   HEP.Automation.EventChain.LHEConn
                   HEP.Automation.EventChain.Match
                   HEP.Automation.EventChain.Print
                   HEP.Automation.EventChain.Process
                   HEP.Automation.EventChain.Process.Generator
                   HEP.Automation.EventChain.Simulator
                   HEP.Automation.EventChain.SpecDSL
                   HEP.Automation.EventChain.Type.Match 
                   HEP.Automation.EventChain.Type.Process
                   HEP.Automation.EventChain.Type.Skeleton
                   HEP.Automation.EventChain.Type.Spec         
                   HEP.Automation.EventChain.Util
  Other-Modules: 

 
		 