Name:		evchain
Version:	0.999
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:     test/resources/*.lhe
                test/resources/*.lhe.gz

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   bytestring >= 0.9,
                   cmdargs, 
                   LHEParser >= 0.999,
                   HEPUtil, 
                   xml-types,
                   conduit > 1,
                   conduit-util >= 0.999,
                   zlib-conduit >= 1,
                   xml-conduit >= 1, 
                   vector, 
                   hmatrix, 
                   random >= 1.0,
                   unordered-containers >= 0.2, 
                   hashable >= 1.1,
                   madgraph-auto >= 0.999,
                   madgraph-auto-model >= 0.999,
                   webdav-manager >= 0.999,
                   process,
                   unix,
                   containers >= 0.4, 
                   pureMD5 >= 2.1, 
                   zlib >= 0.5
                   
  Exposed-Modules: 
                   HEP.Automation.EventChain.Driver 
                   HEP.Automation.EventChain.File
                   HEP.Automation.EventChain.LHEConn
                   HEP.Automation.EventChain.Match
                   HEP.Automation.EventChain.Print
                   HEP.Automation.EventChain.Process
                   HEP.Automation.EventChain.Process.Generator
                   HEP.Automation.EventChain.Simulator
                   HEP.Automation.EventChain.SpecDSL
                   HEP.Automation.EventChain.Type.Match 
                   HEP.Automation.EventChain.Type.Process
                   HEP.Automation.EventChain.Type.Skeleton
                   HEP.Automation.EventChain.Type.Spec         
                   HEP.Automation.EventChain.Util
  Other-Modules: 

 
		 