Name:		evchain
Version:	0.999
Synopsis:	
Description: 	
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:     test/resources/*.lhe
                test/resources/*.lhe.gz

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   bytestring >= 0.9,
                   cmdargs, 
                   conduit > 1.1,
                   conduit-util >= 0.999,
                   conduit-extra > 1.1,
                   containers >= 0.4, 
                   directory, 
                   filepath,
                   hashable >= 1.1,
                   HEPUtil, 
                   hmatrix, 
                   LHEParser >= 0.999,
                   LHE-sanitizer,
                   mtl>2, 
                   madgraph-auto >= 0.999,
                   pipeline-eventgen,
                   process,
                   pureMD5 >= 2.1, 
                   random >= 1.0,
                   transformers > 0.3,
                   unix,
                   unordered-containers >= 0.2, 
                   vector, 
                   webdav-manager >= 0.999,
                   xml-conduit >= 1, 
                   xml-types,
                   zlib >= 0.5, 
                   zlib-conduit >= 1
                   
  Exposed-Modules: 
                   HEP.Automation.EventChain.Driver 
                   HEP.Automation.EventChain.File
                   HEP.Automation.EventChain.LHEConn
                   HEP.Automation.EventChain.Match
                   HEP.Automation.EventChain.Print
                   HEP.Automation.EventChain.Process
                   HEP.Automation.EventChain.Process.Generator
                   HEP.Automation.EventChain.Simulator
                   HEP.Automation.EventChain.SpecDSL
                   HEP.Automation.EventChain.Type.Match 
                   HEP.Automation.EventChain.Type.MultiProcess
                   HEP.Automation.EventChain.Type.Process
                   HEP.Automation.EventChain.Type.Skeleton
                   HEP.Automation.EventChain.Type.Spec         
                   HEP.Automation.EventChain.Util
  Other-Modules: 

 
		 